--- a/mapping/templates/mapping/newframework.html
+++ b/mapping/templates/mapping/newframework.html
@@ -19,7 +19,7 @@
         <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">YOUTH </a></li>
         <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">VOLUNTEERING</a></li>
       </ul>
-      <nav class="top-nav red accent-2 fixed">
+      <nav class="top-nav light-blue lighten-1 fixed ">
         <div class="container">
           <div class="nav-wrapper">
             <a class="title">{{ title }}</a>
@@ -35,13 +35,13 @@
 
 
       <ul id="nav-mobile" class="side-nav fixed">
-        <li class="bold"><a href="#" class="waves-effect waves-teal">OCAC</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Status of OCAC recommendation Implemenation</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Leadership Dev Z/G</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Digital Divide</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Learning Platform total users till Aug 2014</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Databank</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">Adoptation of Learning Platform</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">OCAC</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1 ">Status of OCAC recommendation Implemenation</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">Leadership Dev Z/G</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">Digital Divide</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">Learning Platform total users till Aug 2014</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">Databank</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal red lighten-1">Adoptation of Learning Platform</a></li>
       </ul>  
 
     </header>  
