--- a/mapping/templates/mapping/nsd.html
+++ b/mapping/templates/mapping/nsd.html
@@ -19,7 +19,7 @@
         <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">YOUTH </a></li>
         <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">VOLUNTEERING</a></li>
       </ul>
-      <nav class="top-nav red accent-4 fixed">
+      <nav class="top-nav red fixed">
         <div class="container">
           <div class="nav-wrapper">
             <a class="title">{{ title }}</a>
