--- a/mapping/templates/mapping/od.html
+++ b/mapping/templates/mapping/od.html
@@ -18,7 +18,7 @@
         <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">YOUTH </a></li>
         <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">VOLUNTEERING</a></li>
       </ul>
-      <nav class="top-nav red accent-1">
+      <nav class="top-nav red ">
         <div class="container">
           <div class="nav-wrapper">
             <a class="page-title">{{ title }}</a>
