--- a/mapping/templates/mapping/home.html
+++ b/mapping/templates/mapping/home.html
@@ -13,20 +13,19 @@
 <body>
     <header>
       <ul id="dropdown1" class="dropdown-content">
-        <li class="bold"><a href="/od/newframework" class="waves-effect waves-teal">NS In NEW FRAMEWORK</a></li>
-        <li class="bold"><a href="/od/nsd" class="waves-effect waves-teal">NATIONAL SOCIETY DEVELOPMENT</a></li>
-        <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">YOUTH </a></li>
-        <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">VOLUNTEERING</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal">DEPARTMENT</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal">TASK</a></li>
+        <li class="bold"><a href="#" class="waves-effect waves-teal">SUBTASK</a></li>
       </ul>
-      <nav class="top-nav red accent-1">
+      <nav class="top-nav red ">
         <div class="container">
           <div class="nav-wrapper">
             <a class="page-title">{{ title }}</a>
             <ul class="header-list right">
-                <li><a class="dropdown-button" href="#" data-activates="dropdown1">Organization Development<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-                <li><a href="#">Disaster Management</a></li>
-                <li><a href="#">Health</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="#">FILTER</a></li>
+                <li><a href="/department">INSERT DATA</a></li>
+                <li><a class="dropdown-button" href="#" data-activates="dropdown1">ADD NEW<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+                <li><a href="/logout">LOGOUT</a></li>
             </ul>
           </div>
         </div>
