--- a/mapping/templates/mapping/youth.html
+++ b/mapping/templates/mapping/youth.html
@@ -14,20 +14,18 @@
    
     <header>
       <ul id="dropdown1" class="dropdown-content">
-        <li class="bold"><a href="/od/newframework" class="waves-effect waves-teal">NS In NEW FRAMEWORK</a></li>
-        <li class="bold"><a href="/od/nsd" class="waves-effect waves-teal">NATIONAL SOCIETY DEVELOPMENT</a></li>
-        <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">YOUTH </a></li>
-        <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">VOLUNTEERING</a></li>
+        <li class="bold"><a href="/od/newframework" class="waves-effect waves-teal">NS In Newframework</a></li>
+        <li class="bold"><a href="/od/nsd" class="waves-effect waves-teal">NS Development</a></li>
+        <li class="bold"><a href="/od/youth" class="waves-effect waves-teal">Youth </a></li>
+        <li class="bold"><a href="/od/volunteer" class="waves-effect waves-teal">Volunteer</a></li>
       </ul>
       <nav class="top-nav cyan fixed">
         <div class="container">
           <div class="nav-wrapper">
             <a class="title">{{ title }}</a>
             <ul class="header-list right">
-                <li><a class="dropdown-button" href="#" data-activates="dropdown1">Organization Development<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-                <li><a href="#">Disaster Management</a></li>
-                <li><a href="#">Health</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="/logout">LOGOUT</a></li>
             </ul>
           </div>
         </div>
@@ -57,10 +55,16 @@
     <main class="dashboard">
       <div class="container">
         <div class="row">
-            <div class="col s12 m10">
-              {% block main %}{% endblock %}
-            </div>
+          <div class="col l3">
+            <a class="dropdown-button waves-effect waves-light button " href="#" data-activates="dropdown1" ><i id="down" class="mdi-navigation-arrow-drop-down right"></i>Organization Development</a>
           </div>
+          <div class="col l3">
+            <a class="dropdown-button waves-effect waves-light button " href="#" data-activates="dropdown1" ><i id="down" class="mdi-navigation-arrow-drop-down right"></i>Disaster Management</a>
+          </div>
+          <div class="col l3">
+            <a class="dropdown-button waves-effect waves-light button " href="#" data-activates="dropdown1" ><i id="down" class="mdi-navigation-arrow-drop-down right"></i>Health</a>
+          </div>
+        </div>
           {% block action-btn %}
           {% endblock %}
         </div>
