--- a/mapping/static/css/style.css
+++ b/mapping/static/css/style.css
@@ -11,11 +11,23 @@ nav .brand-logo {
   color: #fff;
 }
 
-.box{width: 85%;
-      padding-top: 80px;
-      padding-left: 50px;
-
+.btn-large{margin-top: 30px ;
+          width: 100%;
+          height: 50px ;
+          line-height: 25px;
 }
+
+.drop{z-index: 10 ;}
+
+.box{width: 85%;
+      margin-top: 50px;
+      margin-left: 80px;
+      height: 300px;
+      margin-bottom: 100px;
+      height: 600px;
+}
+
+body{background-color: #ffecb3 ;}
 
 .divider{height: 5px;}
 
