--- a/mapping/templates/mapping/login.html
+++ b/mapping/templates/mapping/login.html
@@ -24,8 +24,8 @@
                   <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
                 </div>
                 <div class="input-field">
-                  <input id="email" name="email" type="email" required>
-                  <label for="email">Email</label>
+                  <input id="username" name="username" type="text" required>
+                  <label for="username">Username</label>
                 </div>
                 <div class="input-field">
                   <input id="password" name="password" type="password" required>
