--- a/mapping/static/css/style.css
+++ b/mapping/static/css/style.css
@@ -14,8 +14,14 @@ nav .brand-logo {
 .btn-large{margin-top: 30px ;
           width: 100%;
           height: 50px ;
-          line-height: 25px;
+          
 }
+
+.side-nav{width: 300px;}
+
+.side-nav li {padding: 0px 0px ;}
+
+.dep{width: 70% ;}
 
 .drop{z-index: 10 ;}
 
@@ -27,11 +33,21 @@ nav .brand-logo {
       height: 600px;
 }
 
-body{background-color: #ffecb3 ;}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    background-color: #ffecb3 ;
+  }
 
 .divider{height: 5px;}
 
-#down{margin-top:7px; }
+.down{margin-top: 50px;
+
+}
+
+.dropdown-content{margin-top: 80px;}
 
 #change{color: black}
 
@@ -114,6 +130,7 @@ footer.page-footer {
 
 header.dashboard, main.dashboard {
   padding-left: 240px;
+  flex: 1 0 auto;
 }
 
 @media only screen and (max-width : 992px) {
@@ -162,7 +179,7 @@ a.button-collapse.top-nav.full {
 
 @media only screen and (min-width : 993px) {
   .container {
-    width: 85%;
+    width: 90%;
   }
 }
 
