--- a/mapping/static/css/style.css
+++ b/mapping/static/css/style.css
@@ -23,16 +23,16 @@ nav .brand-logo {
 
 .dep{width: 70% ;}
 
-.drop{z-index: 10 ;}
+.drop{z-index: 50 ;}
 
-.box{width: 85%;
-      margin-top: 50px;
+.box{ width: 85%;
+      margin-top: 80px;
       margin-left: 80px;
-      height: 300px;
       margin-bottom: 100px;
-      height: 600px;
+      margin-right: 80px ;
+      min-height: 700px;
+      background-color: white ;
 }
-
 
 body {
     display: flex;
@@ -43,7 +43,7 @@ body {
 
 .divider{height: 5px;}
 
-.down{margin-top: 50px;
+.down{padding-top: 40px;
 
 }
 
