--- a/mapping/templates/mapping/newsubtask.html
+++ b/mapping/templates/mapping/newsubtask.html
@@ -12,45 +12,62 @@
 </head>
 <body>
     <header>
-      <ul id="dropdown4" class="dropdown-content">
+      {% for department in departments %}
+      <ul id="dropdown{{department.id}}" class=" drop dropdown-content">
+        {% for task in tasks %}
+        {% if task.department.id == department.id %}
+        <li class="bold"><a href="/department/{{department.id}}/task/{{task.id}}" class="waves-effect waves-teal">{{task.name}}</a></li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+      {% endfor %}
+      <ul id="dropdown5" class="dropdown-content">
         <li class="bold"><a href="/newdepartment" class="waves-effect waves-teal">DEPARTMENT</a></li>
         <li class="bold"><a href="/newtask" class="waves-effect waves-teal">TASK</a></li>
         <li class="bold"><a href="/newsubtask" class="waves-effect waves-teal">SUBTASK</a></li>
       </ul>
-      <nav class="top-nav red ">
+      <div class="navbar-fixed">
+      <nav class="black-text top-nav red ">
         <div class="container">
           <div class="nav-wrapper">
-            <a class="page-title">{{ title }}</a>
+            <a class="head">{{ title }}</a>
             <ul class="header-list right">
-                <li><a href="/">HOME</a></li>
-                <li><a class="dropdown-button" href="#" data-activates="dropdown4">ADD NEW<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-                <li><a href="/logout">LOGOUT</a></li>
+              <li><a href="/">HOME</a></li>
+              <li><a class="dropdown-button" href="#" data-activates="dropdown5">ADD NEW<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+              <li><a href="/logout">LOGOUT</a></li>
             </ul>
           </div>
         </div>
       </nav>
+      </div>
     </header>
     <main>
       <div class="col s12">
         <div class="box">
-            <h5 class="down center">EXISTING DEPARTMENTS</h5>
+            <h5 class="down center">EXISTING DEPARTMENTS AND THEIR TASKS</h5>
             <div class="row">
               {% for department in departments %}
               <div class="col l4">
-              <a class="dropdown-button waves-effect waves-light btn-large" href="#" data-activates="dropdown{{department.id}}">{{department.name}}</a>
+              <a class="dropdown-button waves-effect waves-light btn-large" href="#" data-activates="dropdown{{department.id}}"><i id="down" class="mdi-navigation-arrow-drop-down right"></i>{{department.name}}</a>
               </div>
               {% endfor %}
             </div>
-            <h5 class="down center">ADD NEW DEPARTMENT</h5>
-            <form method="POST" action="" class="col s12">
+            <h5 class="down center">ADD NEW TASK</h5>
+            <form method="POST" action="/newsubtask" class="col s12">
                   <div class="dep down row">
-                  {% csrf_token %}
+                    {% csrf_token %}
+                    <div class="drop input-field col s12">
+                      {{ form.task}}
+                      <label for="{{ form.task.id_for_label }}">{{form.task.label}}</label>
+                    </div>
+                  </div>
+                  <div class="dep down row">
                     <div class="input-field col s12">
                       {{ form.name }}
                       <label for="{{ form.name.id_for_label }}">{{form.name.label}}</label>
                     </div>
                   </div>
-                  <div class="dep down row">
+                  <div class="dep down  row">
                     <div class="col s12 ">
                     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                     <i class="mdi-content-send right"></i>
@@ -58,6 +75,7 @@
                     </div>
                   </div>
             </form>
+          
         </div>
       </div>  
     </main>
