--- a/mapping/templates/mapping/newtask.html
+++ b/mapping/templates/mapping/newtask.html
@@ -13,10 +13,10 @@
 <body>
     <header>
       {% for department in departments %}
-      <ul id="dropdown{{department.id}}" class=" drop dropdown-content">
+      <ul id="dropdown{{department.id}}" class=" dropdown-content">
         {% for task in tasks %}
         {% if task.department.id == department.id %}
-        <li class="bold"><a href="/department/{{department.id}}/task/{{task.id}}" class="waves-effect waves-teal">{{task.name}}</a></li>
+        <li class="bold"><a href="/department/{{department.id}}/task/{{task.id}}" class="drop waves-effect waves-teal">{{task.name}}</a></li>
         {% endif %}
         {% endfor %}
       </ul>
@@ -24,7 +24,7 @@
       <ul id="dropdown5" class="dropdown-content">
         <li class="bold"><a href="/newdepartment" class="waves-effect waves-teal">DEPARTMENT</a></li>
         <li class="bold"><a href="/newtask" class="waves-effect waves-teal">TASK</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-teal">SUBTASK</a></li>
+        <li class="bold"><a href="/newsubtask" class="waves-effect waves-teal">SUBTASK</a></li>
       </ul>
       <div class="navbar-fixed">
       <nav class="black-text top-nav red ">
@@ -43,9 +43,8 @@
     </header>
     <main>
       <div class="col s12">
-        <div class="box card">
-          <div class="card-content">
-            <h5 class="center">EXISTING DEPARTMENTS AND THEIR TASKS</h5>
+        <div class="box">
+            <h5 class="down center">EXISTING DEPARTMENTS AND THEIR TASKS</h5>
             <div class="row">
               {% for department in departments %}
               <div class="col l4">
@@ -54,15 +53,21 @@
               {% endfor %}
             </div>
             <h5 class="down center">ADD NEW TASK</h5>
-            <form method="POST" action="" class="col s12">
-                  <div class="dep row">
-                  {% csrf_token %}
+            <form method="POST" action="/newtask" class="col s12">
+                  <div class="dep down row">
+                    {% csrf_token %}
+                    <div class="drop input-field col s12">
+                      {{ form.department}}
+                      <label for="{{ form.department.id_for_label }}">{{form.department.label}}</label>
+                    </div>
+                  </div>
+                  <div class="dep down row">
                     <div class="input-field col s12">
                       {{ form.name }}
                       <label for="{{ form.name.id_for_label }}">{{form.name.label}}</label>
                     </div>
                   </div>
-                  <div class="dep row">
+                  <div class="dep down row">
                     <div class="col s12 ">
                     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                     <i class="mdi-content-send right"></i>
@@ -70,7 +75,6 @@
                     </div>
                   </div>
             </form>
-          </div>
         </div>
       </div>  
     </main>
