--- a/mapping/static/css/admin_style.css
+++ b/mapping/static/css/admin_style.css
@@ -6,75 +6,20 @@
  * Made By MaterializeCSS.com
  */
 
+header, main, footer {
+  padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+    padding-left: 0;
+  }
+}
+
 nav ul a,
 nav .brand-logo {
   color: #fff;
 }
-
-.btn-large{margin-top: 30px ;
-          width: 100%;
-          height: 50px ;
-
-}
-
-.side-nav{width: 300px;}
-
-.side-nav li {padding: 0px 0px ;}
-
-.dep{width: 70% ;}
-
-.drop{z-index: 50 ;}
-
-.box{ width: 85%;
-      margin-top: 80px;
-      margin-left: 80px;
-      margin-bottom: 100px;
-      margin-right: 80px ;
-      min-height: 700px;
-      background-color: white ;
-}
-
-body {
-  background-color: #ffecb3 ;
-}
-
-.divider{height: 5px;}
-
-.down{padding-top: 40px;
-
-}
-
-.dropdown-content{margin-top: 80px;}
-
-#change{color: black}
-
-.button{border:none;
-        border-radius: 2px ;
-        padding : 0 2rem;
-        text-transform: uppercase;
-        background-color: #4db6ac  ;
-        color: white ;
-        margin-top: 20px;
-        min-height: 50px;
-        min-width: 200px;
-        text-align: center;
-        padding-top: 5px;
-}
-
-nav a.logout{line-height: 80px;}
-
-nav.top-nav a.head{
-      margin-left: -80px ;
-      font-size: 30px ;
-      font: bold ;
-      }
-.title{
-      margin-left: -80px ;
-      font-size: 20px ;
-
-      }
-
-#nav-mobile {margin-top: 80px }
 
 p {
   line-height: 2rem;
@@ -127,7 +72,6 @@ footer.page-footer {
 
 header.dashboard, main.dashboard {
   padding-left: 240px;
-  flex: 1 0 auto;
 }
 
 @media only screen and (max-width : 992px) {
@@ -144,7 +88,6 @@ nav.top-nav {
 nav.top-nav a.page-title, ul.header-list {
   line-height: 80px;
   font-size: 35px;
-
 }
 
 a.button-collapse.top-nav {
@@ -176,12 +119,12 @@ a.button-collapse.top-nav.full {
 
 @media only screen and (min-width : 993px) {
   .container {
-    width: 90%;
+    width: 85%;
   }
 }
 
 .collapsible-header {
-  height: 5rem;
+  height: 7rem;
 }
 
 .list-name {
@@ -196,6 +139,10 @@ a.button-collapse.top-nav.full {
   padding-right: 5px;
 }
 
+.list-property:before {
+  content: " » ";
+}
+
 @media only screen and (max-width : 600px) {
   a.button-collapse.top-nav {
     left: 0;
@@ -205,39 +152,22 @@ a.button-collapse.top-nav.full {
     display: block;
   }
   .collapsible-header {
-    height: 6rem;
+    height: 10rem;
   }
+}
+
+.list-content ul {
+  padding: 15px;
+}
+
+.btn {
+  z-index: 0;
+}
+
+#form-error {
+  padding: 10px;
 }
 
 select.browser-default {
   height: auto;
-}
-
-table th{
-  border: 1px solid #000;
-  background: #dedede;
-}
-
-table td {
-  border: 1px solid #000;
-}
-
-.status-1 {
-  background: #E57373;
-}
-
-.status-2 {
-  background: #ffff4d;
-}
-
-.status-3 {
-  background: #00FA9A;
-}
-
-.status-4 {
-  background: #87CEFA
-}
-
-body, table {
-  overflow-x: scroll;
 }
