--- a/mapping/templates/mapping/newdepartment.html
+++ b/mapping/templates/mapping/newdepartment.html
@@ -1,68 +1,33 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>{% block title %}{% endblock %} - NSMM</title>
+{% extends "mapping/admin_template.html" %}
 
-  <!-- CSS  -->
-  <link href="{% static "css/materialize.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static "css/style.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-    <header>
-      <ul id="dropdown4" class="dropdown-content">
-        <li class="bold"><a href="/newdepartment" class="waves-effect waves-teal">DEPARTMENT</a></li>
-        <li class="bold"><a href="/newtask" class="waves-effect waves-teal">TASK</a></li>
-        <li class="bold"><a href="/newsubtask" class="waves-effect waves-teal">SUBTASK</a></li>
-      </ul>
-      <nav class="top-nav red ">
-        <div class="container">
-          <div class="nav-wrapper">
-            <a class="page-title">{{ title }}</a>
-            <ul class="header-list right">
-                <li><a href="/">HOME</a></li>
-                <li><a class="dropdown-button" href="#" data-activates="dropdown4">ADD NEW<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
-                <li><a href="/logout">LOGOUT</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="col s12">
-        <div class="box">
-            <h5 class="down center">EXISTING DEPARTMENTS</h5>
-            <div class="row">
-              {% for department in departments %}
-              <div class="col l4">
-              <a class="dropdown-button waves-effect waves-light btn-large" href="#" data-activates="dropdown{{department.id}}">{{department.name}}</a>
-              </div>
-              {% endfor %}
-            </div>
-            <h5 class="down center">ADD NEW DEPARTMENT</h5>
-            <form method="POST" action="" class="col s12">
-                  <div class="dep down row">
-                  {% csrf_token %}
-                    <div class="input-field col s12">
-                      {{ form.name }}
-                      <label for="{{ form.name.id_for_label }}">{{form.name.label}}</label>
-                    </div>
-                  </div>
-                  <div class="dep down row">
-                    <div class="col s12 ">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="mdi-content-send right"></i>
-                    </button>
-                    </div>
-                  </div>
-            </form>
-        </div>
-      </div>  
-    </main>
-    <script src="{% static "js/jquery-2.1.1.min.js" %}"></script>
-    <script src="{% static "js/materialize.js" %}"></script>
-    <script src="{% static "js/init.js" %}"></script>
-</body>
-</html>
+{% block title %}{{ title }}{% endblock %}
+
+{% block main %}
+
+{% if form.errors %}
+<div id="form-error">
+  <p>The operation could not be performed because one or more error(s) occurred.<br />Please resubmit the form after making the following changes:</p>
+  <ul>
+  {% for field in form %}
+  {% if field.errors %}
+  <li>{{ field.label }} - {{ field.errors|striptags }}</li>
+  {% endif %}
+  {% endfor %}
+  </ul>
+</div>
+{% endif %}
+
+<form method="POST" action="/admin/department/new" class="col s12">
+  <div class="row">
+    {% csrf_token %}
+    <div class="input-field col s6">
+      {{ form.name }}
+      <label for="{{ form.name.id_for_label }}">{{form.name.label}}</label>
+    </div>
+  </div>
+
+  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="mdi-content-send right"></i>
+  </button>
+</form>
+{% endblock %}
