task_list edit add page

--- a/mapping/templates/mapping/department_list.html
+++ b/mapping/templates/mapping/department_list.html
@@ -11,6 +11,7 @@
       <span class="list-name red-text">{{ d.name }}</span>
         <span class="right">
           <a class="red-text" href="/admin/department/{{ d.id }}/edit"><i class="mdi-content-create tiny"></i></a>
+          <a class="red-text" href="/admin/department/{{ d.id }}/task"><i class="mdi-editor-format-list-numbered tiny"></i></a>
         </span>
         <br>
       </p>
