--- a/mapping/templates/mapping/editsubtask.html
+++ b/mapping/templates/mapping/editsubtask.html
@@ -17,7 +17,7 @@
 </div>
 {% endif %}
 
-<form method="POST" action="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/new" class="col s12">
+<form method="POST" action="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/{{subtask_id}}/edit" class="col s12">
   <div class="row">
     {% csrf_token %}
     <div class="input-field col s6">
