--- a/mapping/templates/mapping/viewsubtask.html
+++ b/mapping/templates/mapping/viewsubtask.html
@@ -1,5 +1,6 @@
 {% extends "mapping/departments.html" %}
 {% load staticfiles %}
+{% load mapping_extras %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,13 +11,23 @@
   <!-- CSS  -->
   <link href="{% static "css/materialize.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="{% static "css/style.css" %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
 {% block action-btn %}
     <header>
       <ul id="nav-mobile" class="side-nav fixed">
         {% for subtask in subtasks %}
-        <li class="bold"><a href="/department/{{ subtask.task.department.id }}/task/{{ subtask.task.id }}/subtask/{{ subtask.id }}" class="waves-effect waves-teal">{{subtask.name}}</a></li>
+        <li class="bold">
+          <a href="/department/{{subtask.task.department.id }}/task/{{subtask.task.id}}/subtask/{{subtask.id}}" class="waves-effect waves-teal">
+          {% if subtask|is_filled:user.country.id %}
+          <i class="green-text material-icons">done</i>
+          {% else %}
+          <i class="red-text material-icons">report_problem</i>
+          {% endif %}
+          {{subtask.name}}</a>
+        </li>
         {% endfor %}
       </ul>
     </header>
