Adjusted text and added pop up details

--- a/mapping/static/css/style.css
+++ b/mapping/static/css/style.css
@@ -241,3 +241,7 @@ table td {
 body, table {
   overflow-x: scroll;
 }
+
+@media only screen and (min-width: 993px){
+.row .col.l4{width:inherit ;}
+}
