--- a/mapping/templates/mapping/subtask_list.html
+++ b/mapping/templates/mapping/subtask_list.html
@@ -10,8 +10,7 @@
       <p>
       <span class="list-name red-text">{{ s.name }}</span>
         <span class="right">
-          <a class="red-text" href="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/{{s.id}}/edit"><i class="mdi-content-create tiny"></i></a>
-          <a class="red-text" href="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/{{s.id}}"><i class="mdi-editor-format-list-numbered tiny"></i></a>
+          <a class="red-text" href="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/{{s.id}}/edit"><i class="tooltipped mdi-content-create tiny" data-position="top" data-delay="50" data-tooltip="Edit Subtask Name "></i></a>
         </span>
         <br>
       </p>
@@ -23,6 +22,6 @@
 
 {% block action-btn %}
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-  <a href="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/new" class="btn-floating btn-large waves-effect waves-light red "><i class="mdi-content-add"></i></a>
+  <a href="/admin/department/{{ department_id }}/task/{{task_id}}/subtask/new" class="btn-floating btn-large waves-effect waves-light red "><i class="tooltipped mdi-content-add" data-position="top" data-delay="50" data-tooltip="Add New Subtask"></i></a>
 </div>
 {% endblock %}
