Added forgot password; modified the database models to include emails

--- a/mapping/templates/mapping/password_reset_form.html
+++ b/mapping/templates/mapping/password_reset_form.html
@@ -19,33 +19,16 @@
         <div class="col s12 offset-m3 m7">
           <div class="card">
             <div class="card-content">
-              <form id="login">
+              <p>Please specify your email address to receive instructions for resetting it.</p>
+              <form method="POST">
                 <div class="input-field">
                   <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
                 </div>
                 <div class="input-field">
-                  <input id="username" name="username" type="text" required>
-                  <label for="username">Username</label>
+                  {{ form.email }}
+                  <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
                 </div>
-                <div class="input-field">
-                  <input id="password" name="password" type="password" required>
-                  <label for="password">Password</label>
-                </div>
-                <div class="center-align input-field">
-                  <div id="loader" class="preloader-wrapper small inactive">
-                    <div class="spinner-layer spinner-red-only">
-                        <div class="circle-clipper left">
-                        <div class="circle"></div>
-                        </div><div class="gap-patch">
-                        <div class="circle"></div>
-                        </div><div class="circle-clipper right">
-                        <div class="circle"></div>
-                        </div>
-                    </div>
-                  </div>
-                  <input type="submit" value="Login" class="red btn">
-                  <a href="/password/reset">Forgot Password?</a>
-                </div>
+                 <input type="submit" value="Reset Password" class="red btn">
               </form>
             </div>
           </div>
