--- a/mapping/templates/mapping/user_list.html
+++ b/mapping/templates/mapping/user_list.html
@@ -13,7 +13,9 @@
           <a class="red-text" href="/admin/user/{{ u.id }}/edit"><i class="mdi-content-create tiny"></i></a>
         </span>
         <br>
-        <span class="list-property red-text text-lighten-1">{{ u.username }}</span><span class="list-property red-text text-lighten-1">{{ u.country }}</span>
+        <span class="list-property red-text text-lighten-1">{{ u.username }}</span>
+        <span class="list-property red-text text-lighten-1">{{ u.country }}</span>
+        <span class="list-property red-text text-lighten-1">{{ u.email }}</span>
       </p>
     </div>
   </li>
