--- a/mapping/templates/mapping/password_reset_confirm.html
+++ b/mapping/templates/mapping/password_reset_confirm.html
@@ -17,36 +17,42 @@
       <!--   Login Form   -->
       <div class="row">
         <div class="col s12 offset-m3 m7">
+          {% if form.errors %}
+          <div id="form-error">
+            <p>The operation could not be performed because one or more error(s) occurred.<br />Please resubmit the form after making the following changes:</p>
+            <ul>
+            {% for field in form %}
+            {% if field.errors %}
+            <li>{{ field.label }} - {{ field.errors|striptags }}</li>
+            {% endif %}
+            {% endfor %}
+            </ul>
+          </div>
+          {% endif %}
           <div class="card">
             <div class="card-content">
-              <form id="login">
+              {% if validlink %}
+              <p>Please enter your new password twice</p>
+              <form method="POST">
                 <div class="input-field">
                   <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
                 </div>
                 <div class="input-field">
-                  <input id="username" name="username" type="text" required>
-                  <label for="username">Username</label>
+                  {{ form.new_password1 }}
+                  <label for="{{ form.new_password1.id_for_label }}">{{ form.new_password1.label }}</label>
+                 <div class="input-field">
+                  {{ form.new_password2 }}
+                  <label for="{{ form.new_password2.id_for_label }}">{{ form.new_password2.label }}</label>
                 </div>
-                <div class="input-field">
-                  <input id="password" name="password" type="password" required>
-                  <label for="password">Password</label>
                 </div>
-                <div class="center-align input-field">
-                  <div id="loader" class="preloader-wrapper small inactive">
-                    <div class="spinner-layer spinner-red-only">
-                        <div class="circle-clipper left">
-                        <div class="circle"></div>
-                        </div><div class="gap-patch">
-                        <div class="circle"></div>
-                        </div><div class="circle-clipper right">
-                        <div class="circle"></div>
-                        </div>
-                    </div>
-                  </div>
-                  <input type="submit" value="Login" class="red btn">
-                  <a href="/password/reset">Forgot Password?</a>
-                </div>
+                 <input type="submit" value="Reset Password" class="red btn">
               </form>
+              {% else %}
+              <h4>Password reset unsuccessful</h4>
+              <p>The password reset link was invalid,
+              possibly because it has already been used.
+              Please request a new password reset.
+              {% endif %}
             </div>
           </div>
         </div>
