Filter for normal users and login required on views

--- a/mapping/templates/mapping/admin_header.html
+++ b/mapping/templates/mapping/admin_header.html
@@ -15,4 +15,5 @@
   <li class="bold"><a href="/admin/user" class="waves-effect waves-teal">Users</a></li>
   <li class="bold"><a href="/admin/department" class="waves-effect waves-teal">Department</a></li>
   <li class="bold"><a href="/admin/filter" class="waves-effect waves-teal">Filter</a></li>
+  <li class="bold"><a href="/changepassword" class="waves-effect waves-teal">Change Password</a></li>
 </ul>
