--- a/mapping/templates/mapping/viewsubtask.html
+++ b/mapping/templates/mapping/viewsubtask.html
@@ -37,7 +37,7 @@
           <div class="col s12">
             <div class="box card">
               <div class="card-content">
-                <h4 class="center">PLEASE ENTER DETAILS</h4>
+                <h5 class="center">{{ name }}</h5>
                 <form method="POST" action="" class="col s12">
                   <div class="row">
                   {% csrf_token %}
