--- a/mapping/templates/mapping/filter.html
+++ b/mapping/templates/mapping/filter.html
@@ -1,17 +1,24 @@
-{% extends "mapping/admin_template.html" %}
+{% extends "mapping/departments.html" %}
 {% load staticfiles %}
-
-{% block title %}{{ title }}{% endblock %}
-{% block main %}
+{% load mapping_extras %}
+{% block departments %}{% endblock %}
+{% block main_class %}{% endblock %}
+{% block action-btn %}
 <div class="row">
-  <div class="col s12">
-    <form action="" method="POST">
-      {% csrf_token %}
-      {{ filter.form.as_p }}
-      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-        <i class="mdi-content-send right"></i>
-      </button>
-    </form>
+<div class="col s12">
+  <div class="box card">
+    <div class="card-content">
+      <h4 class="center">Filter Data</h4>
+      <form method="POST" action="" class="col s12">
+        <div class="row">
+        {% csrf_token %}
+        {{ filter.form.as_p }}
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+          <i class="mdi-content-send right"></i>
+        </button>
+      </form>
+    </div>
   </div>
+</div>
 </div>
 {% endblock %}
